src/test/resources/Parser/SyntaxErrors/TypeDoesNotImplementFor.front
class Test:
    a() {
        for b : this {}
    }